// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot: Input Form renders correctly 1`] = `
<div
  className=""
>
  <form>
    <div
      className="wvus-field-fname custom-class-field-input form-group has-icon "
      data-field-container="fname"
      data-field-is-valid={false}
    >
      <label
        className="first-name-label"
        htmlFor="fname"
      >
        First Name
         
        <sup>
          *
        </sup>
      </label>
      <div
        className="form-control-wrapper"
      >
        <input
          className="form-control first-name-input"
          disabled={false}
          id="fname"
          name="fname"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="Tim Stehlin"
          readOnly={false}
          type="text"
          value=""
        />
        
        
        
      </div>
    </div>
  </form>
</div>
`;

exports[`Snapshot: Input renders error state 1`] = `
<form>
  <div
    className="wvus-field-fname custom-class-field-input form-group has-icon has-error "
    data-field-container="fname"
    data-field-is-valid={false}
  >
    <label
      className=""
      htmlFor="fname"
    >
      First Name
       
      <sup>
        *
      </sup>
    </label>
    <div
      className="form-control-wrapper"
    >
      <input
        className="form-control "
        disabled={false}
        id="fname"
        name="fname"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="Tim Stehlin"
        readOnly={false}
        type="text"
        value=""
      />
      
      <span>
        <i
          className="fa fa-exclamation-circle"
        />
        <span
          className="message"
          data-field-validation-message={true}
        >
          Error message displays here
        </span>
      </span>
      
    </div>
  </div>
</form>
`;

exports[`Snapshot: Input renders success state 1`] = `
<form>
  <div
    className="wvus-field-fname custom-class-field-input form-group has-icon has-success "
    data-field-container="fname"
    data-field-is-valid={true}
  >
    <label
      className=""
      htmlFor="fname"
    >
      First Name
       
      <sup>
        *
      </sup>
    </label>
    <div
      className="form-control-wrapper"
    >
      <input
        className="form-control "
        disabled={false}
        id="fname"
        name="fname"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="Tim Stehlin"
        readOnly={false}
        type="text"
        value="Scott Rees"
      />
      
      
      <span>
        <i
          className="fa fa-check-circle"
        />
        <span
          className="message"
          data-field-validation-message={true}
        />
      </span>
    </div>
  </div>
</form>
`;

exports[`Snapshot: Input renders untouched state 1`] = `
<form>
  <div
    className="wvus-field-fname custom-class-field-input form-group has-icon "
    data-field-container="fname"
    data-field-is-valid={true}
  >
    <label
      className=""
      htmlFor="fname"
    >
      First Name
       
      <sup>
        *
      </sup>
    </label>
    <div
      className="form-control-wrapper"
    >
      <input
        className="form-control "
        disabled={false}
        id="fname"
        name="fname"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="Tim Stehlin"
        readOnly={false}
        type="text"
        value=""
      />
      
      
      
    </div>
  </div>
</form>
`;

exports[`Snapshot: Input renders with optional/valid state 1`] = `
<form>
  <div
    className="wvus-field-fname custom-class-field-input form-group has-icon "
    data-field-container="fname"
    data-field-is-valid={true}
  >
    <label
      className=""
      htmlFor="fname"
    >
      First Name
       
      
    </label>
    <div
      className="form-control-wrapper"
    >
      <input
        className="form-control "
        disabled={false}
        id="fname"
        name="fname"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="Tim Stehlin"
        readOnly={false}
        type="text"
        value=""
      />
      
      
      
    </div>
  </div>
</form>
`;

exports[`Snapshot: Input renders with readonly/disabled attributes 1`] = `
<form>
  <div
    className="wvus-field-fname custom-class-field-input form-group has-icon "
    data-field-container="fname"
    data-field-is-valid={true}
  >
    <label
      className=""
      htmlFor="fname"
    >
      First Name
       
      <sup>
        *
      </sup>
    </label>
    <div
      className="form-control-wrapper"
    >
      <input
        className="form-control "
        disabled={true}
        id="fname"
        name="fname"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="Tim Stehlin"
        readOnly={true}
        type="text"
        value=""
      />
      
      
      
    </div>
  </div>
</form>
`;
